stub initial slides

--- a/index.html
+++ b/index.html
@@ -37,17 +37,26 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Reveal.js</h1>
-					<h3>HTML Presentations Made Easy</h3>
+					<h1>Deep into Postgres</h1>
 					<p>
+						<small>SRUG, Gliwice, 11.04.2014</small>
 					</p>
 				</section>
 
 				<section>
+				<div style="width: 49%; float: left">
+					<h2>Michał Krzyżanowski</h2>
 					<p>
+						@krzyzak
 					</p>
+					<h2>Łukasz Strzebińczyk</h2>
 					<p>
+						@KillaPL
 					</p>
+				</div>
+					<div style="width: 49%; float: right">
+						<img src="grg.png" />
+					</div>
 				</section>
 
 				<section>
