--- a/index.html
+++ b/index.html
@@ -81,6 +81,25 @@ User.create.attributes
 				</section>
 
 				<section>
+					<h2>Fun fact</h2>
+					<p>
+						<pre class="fragment"><code data-trim contenteditable>
+SELECT * FROM my_table WHERE 1 = 0;
+Total runtime: 0.227 ms
+						</code></pre>
+					</p>
+					<p>
+						<pre class="fragment"><code data-trim contenteditable>
+1_000_000.times{|i| MyMongoDocument.new(title: "Document #{i}")
+						</code></pre>
+					</p>
+					<p>
+						<pre class="fragment"><code data-trim>
+Benchmark.measure{ Document.where(1 => 0) }
+=> #&lt;Benchmark::Tms:0x00000101d5a208 @label="", @real=1.603334, 
+@cstime=0.0, @cutime=0.0, @stime=0.0, @utime=0.009999999999990905,
+ @total=0.009999999999990905&gt;
+						</code></pre>
 				</section>
 
 				<section>
