Added hstore and JSON stubs

--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@ User.create.attributes
 				</section>
 
 				<section>
+					<h2>Hstore</h2>
+					<img src="hstore.png" />
+				</section>
+
+				<section>
+					<h2>JSON</h2>
+				</section>
+
+				<section>
 					<h2>Fun fact</h2>
 					<p>
 						<pre class="fragment"><code data-trim contenteditable>
