--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
 				</section>
 
 				<section>
+					<h2>Use the right tool for the right job</h2>
+					<p class="fragment">
+						swiss kit image
+					</p>
+					<p class="fragment">
+						sth.else
+					</p>
 				</section>
 
 				<section>
