Added images for use right tool for right job seciton

--- a/index.html
+++ b/index.html
@@ -61,12 +61,21 @@
 
 				<section>
 					<h2>Use the right tool for the right job</h2>
-					<p class="fragment">
-						swiss kit image
-					</p>
-					<p class="fragment">
-						sth.else
-					</p>
+				</section>
+
+				<section>
+					<h3>MySQL</h3>
+					<img src="mysql_knife.jpg" />
+				</section>
+
+				<section>
+					<h3>MongoDB</h3>
+					<img src="mongo_knife.jpg" />
+				</section>
+
+				<section>
+					<h2>PostgreSQL</h2>
+					<img src="postgres_knife.jpg" />
 				</section>
 
 				<section>
