Added useful links section

--- a/index.html
+++ b/index.html
@@ -355,11 +355,26 @@ SELECT add_rating(1, 4);
  4.5
  				</code></pre>
  				</section>
+
+ 				<section>
+					<h1>Thanks!</h1>
+				</section>
+
+ 				<section>
+					<h1>Questions?</h1>
 				</section>
 
 				<section>
-					<h1>THE END</h1>
-					<h3>BY Hakim El Hattab / hakim.se</h3>
+					<h2>Useful links:</h2>
+					<ul>
+						<li><a href="https://code.google.com/p/plv8js/">https://code.google.com/p/plv8js/</a></li>
+						<li><a href="http://www.postgresql.org/docs/current/static/hstore.html">http://www.postgresql.org/docs/current/static/hstore.html</a></li>
+						<li><a href="http://www.postgresql.org/docs/current/static/functions-json.html">http://www.postgresql.org/docs/current/static/functions-json.html</a></li>
+						<li>
+						<li><a href="http://www.postgresql.org/docs/9.3/static/textsearch.html">http://www.postgresql.org/docs/9.3/static/textsearch.html</a></li>
+						<li><a href="https://github.com/JackC/surus">https://github.com/JackC/surus</a></li>
+						<li><a href="http://postgis.net/">http://postgis.net/</a></li>
+					</ul>
 				</section>
 
 			</div>
