Small improvements into Killas’ part of presentation

--- a/index.html
+++ b/index.html
@@ -148,9 +148,6 @@ SELECT * FROM "users" WHERE
 				<!-- KILLA PART START -->
         <section>
           <h1>#to_json</h1>
-        </section>
-
-        <section>
           <ul>
             <li class="fragment">
               <h3>JBuilder</h3>
@@ -159,7 +156,7 @@ SELECT * FROM "users" WHERE
               <h3>Rabl</h3>
             </li>
             <li class="fragment">
-              ActiveModel::Serializers
+              <h3>ActiveModel::Serializers</h3>
             </li>
             <li class="fragment">
               <h3>PostgreSQL</h3>
@@ -288,13 +285,11 @@ end
 
         <section>
           <h1>Full text search</h1>
+          <img src="magnifying_glass.png" class="fragment" />
         </section>
 
         <section>
-          <img src="magnifying_glass.png"/>
-        </section>
-
-        <section>
+        	<h1>Full text search</h1>
           <ul>
             <li class="fragment">
               <h3>Solr</h3>
