updated my point of view about stored procedures ;)

--- a/index.html
+++ b/index.html
@@ -796,6 +796,11 @@ SELECT name FROM districts WHERE
 
 				<section>
 					<h2>Stored procedures...</h2>
+					<img src="oh-god-why.png" class="fragment" />
+				</section>
+
+				<section>
+					<h2>Stored procedures...</h2>
 					<pre class="fragment"><code data-trim>
 CREATE OR REPLACE FUNCTION update_reason_for_document() RETURNS trigger as $$
       DECLARE
